--- a/index.html
+++ b/index.html
@@ -77,14 +77,14 @@
 <br/><p><a href="index.html"><img src="header.jpeg" alt="" /></a></p>
 <p>William Hazard makes poems with computers.
 <br><br><br><br>
-These poems involve <a href="words/words.html">words</a>.</p>
-<p>They also involve <a href="sounds/sounds.html">sounds</a>.</p>
-<p>These are interwoven with <a href="code/code.html">code</a>.</p>
-<p>Sometimes, they're captured in <a href="videos/videos.html">videos</a>.</p>
-<p>Sometimes, they're shared in <a href="performances/performances.html">performances</a>.</p>
-<p>The rest of the time, there's a <a href="log/log0.html">log</a> [<a href="log/rss.xml">rss</a>].</p>
+These poems involve <a href="words">words</a>.</p>
+<p>They also involve <a href="sounds">sounds</a>.</p>
+<p>These are interwoven with <a href="code">code</a>.</p>
+<p>Sometimes, they're captured in <a href="videos">videos</a>.</p>
+<p>Sometimes, they're shared in <a href="performances">performances</a>.</p>
+<p>The rest of the time, there's a <a href="log">log</a> [<a href="log/rss.xml">rss</a>].</p>
 <hr/>
-<p>updated 240730 – williamthazard [at] pm.me</p>
+<p>updated 240731 – williamthazard [at] pm.me</p>
 </div>
 </body>
 </html><!doctype html>
