--- a/scripts/index.html
+++ b/scripts/index.html
@@ -17,11 +17,12 @@
 <li><a href="vidflip.sh">vidflip.sh</a></li>
 <li><a href="imgflip.sh">imgflip.sh</a></li>
 <li><a href="htmlify.sh">htmlify.sh</a></li>
+<li><a href="redate.sh">redate.sh</a></li>
 <li><a href="build-rss.sh">build-rss.sh</a></li>
 <li><a href="../update.sh">update.sh</a></li>
 </ul>
 <hr/>
-<p>updated 240911 – williamthazard [at] pm.me</p>
+<p>updated 240917 – williamthazard [at] pm.me</p>
 </div>
 </body>
 </html><!doctype html>
