--- a/gifs/index.html
+++ b/gifs/index.html
@@ -11,17 +11,7 @@
 <body>
     <div style="margin:20px">
 <br/>
-<br/><p>the following shell scripts are used to build <a href="../">this website</a></p>
-<ul>
-<li><a href="build.sh">build.sh</a></li>
-<li><a href="gifcomp.sh">gifcomp.sh</a></li>
-<li><a href="vidflip.sh">vidflip.sh</a></li>
-<li><a href="imgflip.sh">imgflip.sh</a></li>
-<li><a href="htmlify.sh">htmlify.sh</a></li>
-<li><a href="redate.sh">redate.sh</a></li>
-<li><a href="build-rss.sh">build-rss.sh</a></li>
-<li><a href="../update.sh">update.sh</a></li>
-</ul>
+<br/><p><img src="../log/pics/MEDIA.gif" alt="MEDIA" title="MEDIA" /></p>
 <hr/>
 <p>updated 241101 – williamthazard [at] pm.me</p>
 </div>
