--- a/gifs/index.html
+++ b/gifs/index.html
@@ -11,10 +11,10 @@
 <body>
     <div style="margin:20px">
 <br/>
-<br/><p><img src="../log/pics/MEDIA.gif" alt="MEDIA" title="MEDIA" />
-<img src="../log/pics/like-a-hawk-waits.gif" alt="like a hawk waits" title="like a hawk waits" />
-<img src="../log/pics/NO-CHOICE.gif" alt="NO CHOICE" title="NO CHOICE" />
-<img src="../log/pics/UTTER-%5B2%5D.gif" alt="UTTER" title="UTTER" /></p>
+<br/><p><img src="../log/pics/MEDIA.gif" alt="MEDIA" title="MEDIA" /></p>
+<p><img src="../log/pics/like-a-hawk-waits.gif" alt="like a hawk waits" title="like a hawk waits" /></p>
+<p><img src="../log/pics/NO-CHOICE.gif" alt="NO CHOICE" title="NO CHOICE" /></p>
+<p><img src="../log/pics/UTTER-%5B2%5D.gif" alt="UTTER" title="UTTER" /></p>
 <hr/>
 <p>updated 241101 – williamthazard [at] pm.me</p>
 </div>
