--- a/gifs/index.html
+++ b/gifs/index.html
@@ -11,12 +11,13 @@
 <body>
     <div style="margin:20px">
 <br/>
-<br/><p><img src="../log/pics/MEDIA.gif" alt="MEDIA" title="MEDIA" /></p>
-<p><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/></p>
-<p><img src="../log/pics/like-a-hawk-waits.gif" alt="like a hawk waits" title="like a hawk waits" /></p>
-<p><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/></p>
-<p><img src="../log/pics/NO-CHOICE.gif" alt="NO CHOICE" title="NO CHOICE" /></p>
-<p><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/></p>
+<br/><p><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/></p>
+<p><img src="../log/pics/MEDIA.gif" alt="MEDIA" title="MEDIA" />
+<br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/></p>
+<p><img src="../log/pics/like-a-hawk-waits.gif" alt="like a hawk waits" title="like a hawk waits" />
+<br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/></p>
+<p><img src="../log/pics/NO-CHOICE.gif" alt="NO CHOICE" title="NO CHOICE" />
+<br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/></p>
 <p><img src="../log/pics/UTTER-%5B2%5D.gif" alt="UTTER" title="UTTER" />
 <br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/></p>
 <hr/>
