--- a/index.html
+++ b/index.html
@@ -19,9 +19,11 @@ These poems involve <a href="words">words</a>.</p>
 <p>These are interwoven with <a href="code">code</a>.</p>
 <p>Sometimes, they're captured in <a href="videos">videos</a>.</p>
 <p>Sometimes, they're shared in <a href="performances">performances</a>.</p>
-<p>The rest of the time, there's a <a href="log">log</a> [<a href="log/rss.xml">rss</a>].</p>
+<p>The rest of the time, there's a <a href="log">log</a> [<a href="log/rss.xml">rss</a>].
+<br><br><br><br>
+<strong><strong><a href="https://www.eventbrite.com/e/-mix-lit-presents-a-flat-imagination-workshop-goodbye-mind-dani-derks-tickets-1116860623189?aff=oddtdtcreator">buy tickets for my next flat imagination workshop here</a></strong></strong></p>
 <hr/>
-<p>updated 241101 – williamthazard [at] pm.me</p>
+<p>updated 241218 – williamthazard [at] pm.me</p>
 </div>
 </body>
 </html><!doctype html>
