--- a/sketches/index.html
+++ b/sketches/index.html
@@ -13,12 +13,13 @@
 <br/>
 <br/><p><a href="../"><img src="sketches.jpeg" alt="" /></a></p>
 <h1><p class='center'>sketches</p></h1>
+<p><a href="curses-krypton/index.html">curses-krypton</a></p>
 <p><a href="candle-cradle/index.html">candle-cradle</a></p>
 <p><a href="240604/index.html">240604</a></p>
 <p><a href="liquid-text/index.html">liquid text</a></p>
 <p><a href="test/index.html">test</a></p>
 <hr/>
-<p>updated 241101 – williamthazard [at] pm.me</p>
+<p>updated 250106 – williamthazard [at] pm.me</p>
 </div>
 </body>
 </html><!doctype html>
