--- a/performances/index.html
+++ b/performances/index.html
@@ -53,6 +53,8 @@
 <p><strong>Mar 25 2022</strong> – <a href="https://overpassbooks.org/">Overpass Books</a> <a href="https://www.awpwriter.org/">AWP</a> <a href="https://www.awpwriter.org/awp_conference/schedule_overview_offsite/2022_PHILADELPHIA">Offsite</a> Reading (w/ <a href="https://overpassbooks.bigcartel.com/product/count-by-melody-wright">Melody Wright</a> &amp; <a href="https://www.cincodesigns.xyz/">Salvador &quot;Cinco&quot; Placensia</a>), <a href="https://chapterhousecafe.wordpress.com/">Chapterhouse Cafe &amp; Gallery</a> (620 South 9th Street), Philadelphia PA</p>
 <hr/>
 <p>updated 241218 – williamthazard [at] pm.me</p>
+<br>
+<p class='right'><a href='https://femishonuga.com/webring.html'>aelrsty</a></p>
 </div>
 </body>
 </html><!doctype html>
