--- a/scripts/index.html
+++ b/scripts/index.html
@@ -24,6 +24,8 @@
 </ul>
 <hr/>
 <p>updated 241101 – williamthazard [at] pm.me</p>
+<br>
+<p class='right'><a href='https://femishonuga.com/webring.html'>aelrsty</a></p>
 </div>
 </body>
 </html><!doctype html>
