--- a/sketches/index.html
+++ b/sketches/index.html
@@ -19,7 +19,9 @@
 <p><a href="liquid-text/index.html">liquid text</a></p>
 <p><a href="test/index.html">test</a></p>
 <hr/>
-<p>updated 250106 – williamthazard [at] pm.me</p>
+<p>updated 250105 – williamthazard [at] pm.me</p>
+<br>
+<p class='right'><a href='https://femishonuga.com/webring.html'>aelrsty</a></p>
 </div>
 </body>
 </html><!doctype html>
