--- a/sounds/index.html
+++ b/sounds/index.html
@@ -25,6 +25,8 @@
 <p><a href="https://soundcloud.com/user-246275786">SoundCloud</a>: sketches, demos, &amp; studies</p>
 <hr/>
 <p>updated 250103 – williamthazard [at] pm.me</p>
+<br>
+<p class='right'><a href='https://femishonuga.com/webring.html'>aelrsty</a></p>
 </div>
 </body>
 </html><!doctype html>
