--- a/words/index.html
+++ b/words/index.html
@@ -20,6 +20,8 @@
 <p><a href="https://ghostproposal.com/">Ghost Proposal</a>: <a href="https://ghostproposal.com/William-Hazard">The Power of Then</a> – a <a href="https://github.com/williamthazard/krahenlied">krähenlied</a> encounter with Eckhart Tolle</p>
 <hr/>
 <p>updated 250103 – williamthazard [at] pm.me</p>
+<br>
+<p class='right'><a href='https://femishonuga.com/webring.html'>aelrsty</a></p>
 </div>
 </body>
 </html><!doctype html>
