--- a/index.html
+++ b/index.html
@@ -19,11 +19,9 @@ These poems involve <a href="words">words</a>.</p>
 <p>These are interwoven with <a href="code">code</a>.</p>
 <p>Sometimes, they're captured in <a href="videos">videos</a>.</p>
 <p>Sometimes, they're shared in <a href="performances">performances</a>.</p>
-<p>The rest of the time, there's a <a href="log">log</a> [<a href="log/rss.xml">rss</a>].
-<br><br><br><br>
-<a href="https://www.eventbrite.com/e/-mix-lit-presents-a-flat-imagination-workshop-goodbye-mind-dani-derks-tickets-1116860623189?aff=oddtdtcreator">//////// buy tickets for the next flat imagination workshop here ////////</a></p>
+<p>The rest of the time, there's a <a href="log">log</a> [<a href="log/rss.xml">rss</a>].</p>
 <hr/>
-<p class='center'>updated 241218 – williamthazard [at] pm.me</p>
+<p class='center'>updated 250121 – williamthazard [at] pm.me</p>
 <p class='center'><a href='https://femishonuga.com/webring.html'>aelrsty</a></p>
 </div>
 </body>
