--- a/code/index.html
+++ b/code/index.html
@@ -14,6 +14,7 @@
 <br/><p><a href="../"><img src="code.jpeg" alt="" /></a></p>
 <h1>code</h1>
 <h3><em>if you derive value or pleasure from these tools, and if you have the means, please consider <a href="https://github.com/sponsors/williamthazard">sponsoring my work</a> with a monthly contribution – your support allows me to keep working on these projects and keeps my work free and open for anyone to use</em></h3>
+<p><a href="https://github.com/williamthazard/color-field">color-field</a> – image sonification script created for &quot;settle,&quot; a collaborative installation with <a href="https://www.tender-form.com/">Alexandra Wood</a> at <a href="https://www.philadelphiasmallworks.com/">The Philadelphia Small Works Gallery</a></p>
 <p><a href="https://github.com/williamthazard/naherinlied">näherinlied</a> – lied script for <a href="https://github.com/ryleelyman/seamstress">seamstress</a>. Turns text into music  – <a href="https://www.youtube.com/watch?v=WkPvt-k2Teg">(demo)</a></p>
 <p><a href="https://github.com/williamthazard/carters-delay-norns">nornsCarter</a> – <a href="https://github.com/williamthazard/carters_delay">Carter's Delay</a> for <a href="https://monome.org/">monome</a> <a href="https://monome.org/docs/norns/">norns</a></p>
 <p><a href="https://github.com/williamthazard/fiw-240705">Flat Imagination Workshop Script 240705</a>: p5.js poem/instrument created for the first installment of the Flat Imagination Workshop in Philadelphia, PA</p>
@@ -42,7 +43,7 @@
 <p><a href="https://github.com/williamthazard/jf-strum-sequencer">strum sequencer</a>: a sequencer for <a href="https://monome.org/">monome</a> <a href="https://monome.org/docs/crow/">crow</a> &amp; <a href="https://monome.org/docs/crow/druid/">druid</a>, based on <a href="https://nnnnnnnn.co/">Tehn's</a> code from <a href="https://www.youtube.com/watch?v=TkH8jxItXbw&amp;list=PLDeicGW8SQOwVdHDQkhUoDkCS67VDRVAd&amp;index=17&amp;t=1214s">Flash Crash 210710</a> – <a href="https://youtu.be/hIXeSZBBOPQ?si=cbG1I6O1LnrGSU7u">(demo)</a></p>
 <p><a href="https://github.com/williamthazard/alphabetsequencer">alphabet sequencer</a>: a sequencer for <a href="https://monome.org/">monome</a> <a href="https://monome.org/docs/crow/">crow</a> &amp; <a href="https://monome.org/docs/crow/druid/">druid</a> – <a href="https://soundcloud.com/user-246275786/all-our-affairs">(demo)</a></p>
 <hr/>
-<p class='center'>updated 241101 – williamthazard [at] pm.me</p>
+<p class='center'>updated 250130 – williamthazard [at] pm.me</p>
 <p class='center'><a href='https://femishonuga.com/webring.html'>aelrsty</a></p>
 </div>
 </body>
