--- a/code/index.html
+++ b/code/index.html
@@ -44,7 +44,7 @@
 <p><a href="https://github.com/williamthazard/alphabetsequencer">alphabet sequencer</a>: a sequencer for <a href="https://monome.org/">monome</a> <a href="https://monome.org/docs/crow/">crow</a> &amp; <a href="https://monome.org/docs/crow/druid/">druid</a> – <a href="https://soundcloud.com/user-246275786/all-our-affairs">(demo)</a></p>
 <hr/>
 <p class='center'>updated 250130 – williamthazard [at] pm.me</p>
-<p class='center'><a href='https://femishonuga.com/webring.html'>aelrsty</a></p>
+<p class='center'><a href='https://femishonuga.com/webring.html'>aelrsty</a> | <a href='https://bsky.app/profile/williamhazard.co'>bluesky</a> | <a href='https://post.lurk.org/@williamhazard'>mastodon</a></p>
 </div>
 </body>
 </html><!doctype html>
