--- a/events/index.html
+++ b/events/index.html
@@ -55,7 +55,7 @@
 <p><strong>Mar 25 2022</strong> – <a href="https://overpassbooks.org/">Overpass Books</a> <a href="https://www.awpwriter.org/">AWP</a> <a href="https://www.awpwriter.org/awp_conference/schedule_overview_offsite/2022_PHILADELPHIA">Offsite</a> Reading (w/ <a href="https://overpassbooks.bigcartel.com/product/count-by-melody-wright">Melody Wright</a> &amp; <a href="https://www.cincodesigns.xyz/">Salvador &quot;Cinco&quot; Placensia</a>), <a href="https://chapterhousecafe.wordpress.com/">Chapterhouse Cafe &amp; Gallery</a> (620 South 9th Street), Philadelphia PA</p>
 <hr/>
 <p class='center'>updated 250211 – williamthazard [at] pm.me</p>
-<p class='center'><a href='https://femishonuga.com/webring.html'>aelrsty</a></p>
+<p class='center'><a href='https://femishonuga.com/webring.html'>aelrsty</a> | <a href='https://bsky.app/profile/williamhazard.co'>bluesky</a> | <a href='https://post.lurk.org/@williamhazard'>mastodon</a></p>
 </div>
 </body>
 </html><!doctype html>
