--- a/sketches/index.html
+++ b/sketches/index.html
@@ -20,7 +20,7 @@
 <p><a href="test/index.html">test</a></p>
 <hr/>
 <p class='center'>updated 250106 – williamthazard [at] pm.me</p>
-<p class='center'><a href='https://femishonuga.com/webring.html'>aelrsty</a></p>
+<p class='center'><a href='https://femishonuga.com/webring.html'>aelrsty</a> | <a href='https://bsky.app/profile/williamhazard.co'>bluesky</a> | <a href='https://post.lurk.org/@williamhazard'>mastodon</a></p>
 </div>
 </body>
 </html><!doctype html>
