--- a/sounds/index.html
+++ b/sounds/index.html
@@ -25,7 +25,7 @@
 <p><a href="https://soundcloud.com/user-246275786">SoundCloud</a>: sketches, demos, &amp; studies</p>
 <hr/>
 <p class='center'>updated 250103 – williamthazard [at] pm.me</p>
-<p class='center'><a href='https://femishonuga.com/webring.html'>aelrsty</a></p>
+<p class='center'><a href='https://femishonuga.com/webring.html'>aelrsty</a> | <a href='https://bsky.app/profile/williamhazard.co'>bluesky</a> | <a href='https://post.lurk.org/@williamhazard'>mastodon</a></p>
 </div>
 </body>
 </html><!doctype html>
