--- a/sketches/index.html
+++ b/sketches/index.html
@@ -13,13 +13,15 @@
 <br/>
 <br/><p><a href="../"><img src="sketches.jpeg" alt="" /></a></p>
 <h1><p class='center'>sketches</p></h1>
+<p><a href="teapot/index.html">teapot</a></p>
+<p><a href="boom-red/index.html">boom-red</a></p>
 <p><a href="curses-krypton/index.html">curses-krypton</a></p>
 <p><a href="candle-cradle/index.html">candle-cradle</a></p>
 <p><a href="240604/index.html">240604</a></p>
 <p><a href="liquid-text/index.html">liquid text</a></p>
 <p><a href="test/index.html">test</a></p>
 <hr/>
-<p class='center'>updated 250106 – williamthazard [at] pm.me</p>
+<p class='center'>updated 250304 – williamthazard [at] pm.me</p>
 <p class='center'><a href='https://femishonuga.com/webring.html'>aelrsty</a> | <a href='https://bsky.app/profile/williamhazard.co'>bluesky</a> | <a href='https://post.lurk.org/@williamhazard'>mastodon</a></p>
 </div>
 </body>
