--- a/sketches/index.html
+++ b/sketches/index.html
@@ -13,6 +13,7 @@
 <br/>
 <br/><p><a href="../"><img src="sketches.jpeg" alt="" /></a></p>
 <h1><p class='center'>sketches</p></h1>
+<p><a href="technically-talk">technical.ly-talk</a></p>
 <p><a href="small-works">small-works</a></p>
 <p><a href="teapot">teapot</a></p>
 <p><a href="boom-red">boom-red</a></p>
@@ -22,7 +23,7 @@
 <p><a href="liquid-text">liquid text</a></p>
 <p><a href="test">test</a></p>
 <hr/>
-<p class='center'>updated 250416 – williamthazard [at] pm.me</p>
+<p class='center'>updated 250507 – williamthazard [at] pm.me</p>
 <p class='center'><a href='https://femishonuga.com/webring.html'>aelrsty</a> | <a href='https://bsky.app/profile/williamhazard.co'>bluesky</a> | <a href='https://post.lurk.org/@williamhazard'>mastodon</a></p>
 </div>
 </body>
