--- a/gbg/index.html
+++ b/gbg/index.html
@@ -11,7 +11,7 @@
 <body>
     <div style="margin:20px">
 <br/>
-<br/><p><a href="./1.html">THE</a> <a href="./2.html">GLASS</a> <a href="./3.html">BEAD</a> <a href="./4.html">GAME</a></p>
+<br/><p><a href="1">THE</a> <a href="2">GLASS</a> <a href="3">BEAD</a> <a href="4">GAME</a></p>
 <hr/>
 <p class='center'>updated 250617 – williamthazard [at] pm.me</p>
 <p class='center'><a href='https://femishonuga.com/webring.html'>aelrsty</a> | <a href='https://bsky.app/profile/williamhazard.co'>bluesky</a> | <a href='https://post.lurk.org/@williamhazard'>mastodon</a></p>
