--- a/scripts/index.html
+++ b/scripts/index.html
@@ -20,10 +20,11 @@
 <li><a href="htmlify.sh">htmlify.sh</a></li>
 <li><a href="redate.sh">redate.sh</a></li>
 <li><a href="build-rss.sh">build-rss.sh</a></li>
+<li><a href="beadify.sh">beadify.sh</a></li>
 <li><a href="../update.sh">update.sh</a></li>
 </ul>
 <hr/>
-<p class='center'>updated 241101 – williamthazard [at] pm.me</p>
+<p class='center'>updated 250617 – williamthazard [at] pm.me</p>
 <p class='center'><a href='https://femishonuga.com/webring.html'>aelrsty</a> | <a href='https://bsky.app/profile/williamhazard.co'>bluesky</a> | <a href='https://post.lurk.org/@williamhazard'>mastodon</a></p>
 </div>
 </body>
