--- a/gbg/4/index.html
+++ b/gbg/4/index.html
@@ -1,1 +1,17 @@
-<p><a href="../1">one</a> <a href="../2">two</a> <a href="../3">three</a> four</p>
+<!doctype html>
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+  <title>William Hazard</title>
+  <link rel="stylesheet" href="../../styles.css" />
+  <link rel="icon" type="image/x-icon" href="../favicon.ico">
+  <meta name="keywords" content="poetry, hazard">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+</head>
+<body>
+    <div style="margin:20px">
+<br/>
+<br/><p><a href="../1">one</a> <a href="../2">two</a> <a href="../3">three</a> four</p>
+</div>
+</body>
+</html><!doctype html>
