--- a/gbg/1/index.html
+++ b/gbg/1/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <title>William Hazard</title>
   <link rel="stylesheet" href="../../styles.css" />
-  <link rel="icon" type="image/x-icon" href="../favicon.ico">
+  <link rel="icon" type="image/x-icon" href="../../favicon.ico">
   <meta name="keywords" content="poetry, hazard">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
