--- a/gbg/index.html
+++ b/gbg/index.html
@@ -11,7 +11,9 @@
 <body>
     <div style="margin:20px">
 <br/>
-<br/><p class='center'>[THE](1) [GLASS](2) [BEAD](3) [GAME](4)</p>
+<br/><p class='center'>
+[THE](1) [GLASS](2) [BEAD](3) [GAME](4)
+</p>
 </div>
 </body>
 </html><!doctype html>
