--- a/gbg/1/index.html
+++ b/gbg/1/index.html
@@ -1,17 +1,14 @@
-<!doctype html>
-<html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>William Hazard</title>
-  <link rel="stylesheet" href="../../styles.css" />
-  <link rel="icon" type="image/x-icon" href="../../favicon.ico">
-  <meta name="keywords" content="poetry, hazard">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-</head>
-<body>
-    <div style="margin:20px">
-<br/>
-<br/><p>one <a href="../2">two</a> <a href="../3">three</a> <a href="../4">four</a></p>
-</div>
-</body>
-</html><!doctype html>
+<!DOCTYPE html>
+<html>
+  <head>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.2/p5.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.2/addons/p5.dom.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.2/addons/p5.sound.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <meta charset="utf-8" />
+
+  </head>
+  <body>
+    <script src="sketch.js"></script>
+  </body>
+</html>
