--- a/gbg/2/index.html
+++ b/gbg/2/index.html
@@ -1,19 +1,15 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>William Hazard</title>
-  <link rel="stylesheet" href="../../styles.css" />
-  <link rel="icon" type="image/x-icon" href="../../favicon.ico">
-  <meta name="keywords" content="poetry, hazard">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-</head>
-<body>
-    <div style="margin:20px">
-<br/>
-<br/><p><audio controls autoplay src="../../log/audio/zander.wav" loop="true"></audio>
-<br>
-<a href="../1">a</a> <a href="../3">blank</a> <a href="../4">delta</a></p>
-</div>
-</body>
-</html><!doctype html>
+  <head>
+    <script src="https://cdn.jsdelivr.net/npm/p5@1.11.7/lib/p5.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/p5@1.11.7/lib/addons/p5.sound.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <meta charset="utf-8" />
+
+  </head>
+  <body>
+    <main>
+    </main>
+    <script src="sketch.js"></script>
+  </body>
+</html>
