--- a/gbg/3/index.html
+++ b/gbg/3/index.html
@@ -1,17 +1,37 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8">
-  <title>William Hazard</title>
-  <link rel="stylesheet" href="../../styles.css" />
-  <link rel="icon" type="image/x-icon" href="../../favicon.ico">
-  <meta name="keywords" content="poetry, hazard">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.9.4/p5.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.9.4/addons/p5.sound.min.js"></script>
+    <meta charset="utf-8" />
+<style>
+  @font-face {
+  font-family: 'Roboto Mono'; font-style: normal; font-weight: 400;
+  src: local(''),
+    url('../include/roboto-mono-v21-latin-regular.woff2') format('woff2'),
+    url('../include/roboto-mono-v21-latin-regular.woff') format('woff'); }
+body {background-color:#222; max-width:800px; color:#fff; 
+  font-family: 'Roboto Mono', monospace; font-size: 0.8em;
+  margin:0px auto; padding: 0 0px;}
+pre {font-size: 1.3em; color:#fff;}
+h1 {font-weight:bold; font-size: 1.6em; margin-top:1.5em;}
+hr {margin-top: 4em; border: none; background-color: #555; color: #555; height: 1px;}
+a {color:#aaa;}
+a:hover {color:#ccc;}
+img {margin-top: -0.5em; max-width:100%;}
+input {font-family: inherit;}
+code {
+  background: #222;
+  word-wrap: break-word;
+  box-decoration-break: clone;
+  padding: .1rem .3rem .2rem;
+  border-radius: .2rem; 
+}
+</style>
 </head>
 <body>
-    <div style="margin:20px">
-<br/>
-<br/><p><a href="../1">one</a> <a href="../2">two</a> three <a href="../4">four</a></p>
-</div>
+  <main>
+  </main>
+  <script src="sketch.js"></script>
 </body>
-</html><!doctype html>
+</html>
