--- a/gbg/archaic/marker.html
+++ b/gbg/archaic/marker.html
@@ -3,15 +3,14 @@
 <head>
   <meta charset="utf-8">
   <title>William Hazard</title>
-  <link rel="stylesheet" href="../styles.css" />
-  <link rel="icon" type="image/x-icon" href="../favicon.ico">
+  <link rel="stylesheet" href="../../styles.css" />
+  <link rel="icon" type="image/x-icon" href="../../favicon.ico">
   <meta name="keywords" content="poetry, hazard">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
     <div style="margin:20px">
 <br/>
-<br/><p><a href="1">THE</a> <a href="2">GLASS</a> <a href="archaic">BEAD</a> <a href="4">GAME</a></p>
-</div>
+<br/></div>
 </body>
 </html><!doctype html>
