--- a/gbg/archaic/index.html
+++ b/gbg/archaic/index.html
@@ -13,7 +13,8 @@
 <br/>
 <br/><h1>ARCHAIC TORSO OF APOLLO</h1>
 <h4>Rainer Maria Rilke</h4>
-<p>We cannot know his legendary <a href="../1">head</a> <br />
+<p><br /><br /><br /><br />
+We cannot know his legendary <a href="../1">head</a> <br />
 with eyes like ripening fruit. And yet his torso <br />
 is still suffused with brilliance from inside, <br />
 like a lamp, in which his gaze, now turned to low, <br /></p>
